fixed link underline and mobile layout issues

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -116,13 +116,15 @@ body {
 
     #site-description {
       font-size: 1.5rem;
-      margin-right: 18rem;
+      // margin-right: 18rem;
+      width: calc(min(30ch, 95%));
     }
 
     nav {
       font-size: 0.75rem;
       height: auto;
       margin-top: 1rem;
+      margin-bottom: 3ch;
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
@@ -136,7 +138,8 @@ body {
         text-decoration: none;
         border: 1px solid var(--text);
         margin: 4ch;
-        margin-left: 0rem;
+        margin-left: 0;
+	margin-bottom: 0;
         padding-left: 3ch;
         padding-right: 3ch;
         width: fit-content;
@@ -186,10 +189,9 @@ body {
 
     .in-progress-container {
 	picture {
-	    
 	    img {
 		height: fit-content;
-		width: 60%;
+		width: calc(min(30ch, 95%));
 		
 	    }
 		
@@ -200,9 +202,12 @@ body {
     
    a {
       // color: inherit;
-      border: none;
+      border-bottom: 1px solid;
       text-decoration: none;
-        margin-bottom: 5rem;
+      margin-bottom: 5rem;
+
+      
+      
 
       article {
         
@@ -302,12 +307,7 @@ main {
 	// padding-right: 5%;
 
 	a {
-		// color: var(--text);
-		text-decoration: none;
-		border-bottom: 1px solid var(--text);
-                &:visited {
-                  // color:inherit;
-                }
+
 	}
 
 	img {
